Fixed keyboard navigation issue where when on mobile screen sizes you could still keyboard navigate to the hidden navbar, added visibility hidden in initial state, and visibility initial when opened. Added a transition with a delay on the visibility to allow for the translateX to take effect before hiding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,8 +241,10 @@ nav {
     top: 0;
     transform: translateX(100%);
     margin-block-start: 82px;
-    transition: transform 300ms 200ms ease-in;
+    transition: transform 300ms 200ms ease-in,
+                visibility 300ms 200ms ease-in;
     border-bottom-left-radius: 10px;
+    visibility: hidden;
   }
 
   .navBar a:focus-visible {
@@ -258,8 +260,10 @@ nav {
   }
 
   .openNav {
+    visibility: initial;
     transform: translateX(0);
   }
+
   /* For hamburger menu, within the media query use the width: min(nearly 100% for mobile, default size for menu when not mobile. It will use the second value when it is big enough and swap to 100% of the screen when mobile, whichever is smaller!) */
 
   .hamburger_nav {
